[package]
name = "todo_cli"
version = "0.1.1"
authors = ["Ilja Umnov ilyaumnovvv@gmail.com"]
edition = "2021"
description = "A simple CLI task manager."
license = "MIT"
repository = "https://github.com/yourusername/todo_cli"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
rustyline = "14.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
